@@ -33,3 +33,4 @@ copyright=1
 
 [Run::BeforeBuild]
 run = /usr/bin/config-edit -model Itself::Model -gen_pod lib
+
